deleted logo in footers / add more news

--- a/myapp/src/news.html
+++ b/myapp/src/news.html
@@ -22,7 +22,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="news.html">News</a></li>
           <li><a class="nav-link scrollto" href="#">About</a></li>
           <li><a class="nav-link scrollto" href="#">Service</a></li>
@@ -124,73 +124,73 @@
                   <div class="row">
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-1.jpg" />
+                              <img src="resources/8.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 1</a>
+                                  <a href="">Viet Nam to purchase nearly 20 million Pfizer vaccine doses</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-2.jpg" />
+                              <img src="resources/9.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 2</a>
+                                  <a href="">More than 5,000 new COVID-19 cases added to national tally</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-3.jpg" />
+                              <img src="resources/10.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 3</a>
+                                  <a href="">Leaders seek EU’s COVID-19 vaccine support</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-4.jpg" />
+                              <img src="resources/13.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 4</a>
+                                  <a href="">Domestic COVID-19 vaccine developer gets financial support</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-5.jpg" />
+                              <img src="resources/11.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 5</a>
+                                  <a href="">Three Coronavirus-hit provinces to get over 4,000 tons rice from national reserve</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-1.jpg" />
+                              <img src="resources/12.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 6</a>
+                                  <a href="">Volunteers get Covivac vaccine in second phase clinical trials</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-2.jpg" />
+                              <img src="resources/14.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 7</a>
+                                  <a href="">HCMC supports 2.5 million difficulty-struck people amidst pandemic time</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-3.jpg" />
+                              <img src="resources/15.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 8</a>
+                                  <a href="">Ha Noi to test 13 groups of high-risk residents</a>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4">
                           <div class="mn-img">
-                              <img src="img/news-350x223-4.jpg" />
+                              <img src="resources/16.jpg" />
                               <div class="mn-title">
-                                  <a href="">News 9</a>
+                                  <a href="">Da Nang starts seven-day lockdown/a>
                               </div>
                           </div>
                       </div>
@@ -201,16 +201,16 @@
                   <div class="mn-list">
                       <h2>Read More</h2>
                       <ul>
-                          <li><a href="">news 1</a></li>
-                          <li><a href="">news 2</a></li>
-                          <li><a href="">news 3</a></li>
-                          <li><a href="">news 4</a></li>
-                          <li><a href="">news 5</a></li>
-                          <li><a href="">news 6</a></li>
-                          <li><a href="">news 7</a></li>
-                          <li><a href="">news 8</a></li>
-                          <li><a href="">news 9</a></li>
-                          <li><a href="">news 10</a></li>
+                          <li><a href="">Health ministry confirms 9,605 new COVID-19 cases</a></li>
+                          <li><a href="">Ha Noi to test 13 groups of high-risk residents</a></li>
+                          <li><a href="">HCMC to extend social distancing by one month to contain COVID-19 spread</a></li>
+                          <li><a href="">Da Nang starts seven-day lockdown</a></li>
+                          <li><a href="">Ha Noi to test 13 groups of high-risk residents</a></li>
+                          <li><a href="">HCMC supports 2.5 million difficulty-struck people amidst pandemic time</a></li>
+                          <li><a href="">Domestic COVID-19 vaccine developer gets financial support</a></li>
+                          <li><a href="">Leaders seek EU’s COVID-19 vaccine support</a></li>
+                          <li><a href="">More than 5,000 new COVID-19 cases added to national tally</a></li>
+                          <li><a href="">Viet Nam to purchase nearly 20 million Pfizer vaccine doses</a></li>
                       </ul>
                   </div>
               </div>
@@ -225,9 +225,7 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <a href="index.html" class="logo"><img src="resources/logo.png" alt="" class="img-fluid"></a>
-          </div>
+
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>Covid Treatment</h3>
             <p>
@@ -242,7 +240,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
