Added User Schedule files

--- a/myapp/src/front end/index.html
+++ b/myapp/src/front end/index.html
@@ -37,7 +37,7 @@
 
   <!-- ===== Intro Section ===== -->
     <section id="intro" class="intro">
-      <div class="container" data-aos="fade-up">
+      <div class="container col-sm-9" data-aos="fade-up">
 		<div id="carousel-index" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 			  <li data-target="#carousel-index" data-slide-to="0" class="active"></li>
@@ -86,7 +86,7 @@
 
   <!-- ======= About Section ======= -->
   <section id="about" class="d-flex align-items-center">
-    <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
+    <div class="container position-relative col-sm-9" data-aos="fade-up" data-aos-delay="100">
       	<h1 style="text-align: center;">About Us</h1>
       <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
