--- a/myapp/src/front end/userprofile.html
+++ b/myapp/src/front end/userprofile.html
@@ -23,7 +23,7 @@
       <!-- .navbar -->
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="news.html">News</a></li>
           <li><a class="nav-link scrollto" href="#">About</a></li>
           <li><a class="nav-link scrollto" href="#">Service</a></li>
@@ -36,6 +36,8 @@
     </div>
   </header>
 <!-- End Header -->
+
+
 
 <!-- ===== User Profile ===== -->
 <hr>
